<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AccelerTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_track">Track</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>    
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>     
    <string name="txtSettingsNotWorking">Settings Options Not Currently Working</string>  
</resources>

